# Lachs

./: .gitignore  CMakeLists.txt  README.md  all.cmd  all.sh  build.bat  config_lin.txt  config_win.txt  generate.bat  run.bat
src/: CMakeLists.txt  main.cpp  paintwidget.cpp  paintwidget.h  window.cpp  window.h
